Student adjustments and new studentdashboard service
